ginger and tofu content added

--- a/ginger-tofu.html
+++ b/ginger-tofu.html
@@ -64,11 +64,11 @@
             </div>
           <div class="col-lg-8 col-md-8 col-12 nopadding displaynone">
             <div class="row container-for-nut-bar nopadding">
-              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Energy <br>478kcal <br>24%</p></div></div>
-              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Fat <br>25g <br>35%</p></div></div>
-              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Saturates <br>5g <br>25%</p></div></div>
-              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Sugars <br>11g <br>12%</p></div></div>
-              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Salt <br>2.2g <br>37%</p></div></div>
+              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Energy <br>613kcal <br>31%</p></div></div>
+              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Fat<br>27g <br>39%</p></p></div></div>
+              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Saturates <br>5g <br>23%</p></div></div>
+              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Sugars <br>18g <br>20%</p></div></div>
+              <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Salt <br>1.8g <br>29%</p></div></div>
           </div>
         </div>
         </div>
