adding navbar to each page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
   <!--------------------------------------------------------------------------- navigation bar -->
   <header>
-    <nav class="navbar sticky-top navbar-expand-lg box-sizing">
+    <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
         <div class="col">
           <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
