--- a/recipe-home-page.html
+++ b/recipe-home-page.html
@@ -14,32 +14,32 @@
 
 <body>
   <header>
-    <nav class="navbar sticky-top navbar-expand-lg">
-      <div class="col-12 container-fluid">
-        <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
-            alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
-          <span class="inline-block" id="logo-title">Fusion Dragon</span></a>
-        <div class="burger">
-          <ul class="navbar-nav">
-            <li class="nav-item d-none d-lg-block inline-block">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item d-none d-lg-block inline-block">
-              <a class="nav-link" href="recipe-home-page.html">Recipes</a>
-            </li>
-            <li class="nav-item d-none d-lg-block inline-block">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
+    <nav class="navbar navbar-expand-lg box-sizing">
+      <div class="row container-fluid navbar-full">
+        <div class="col">
+          <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
+              alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
+            <span class="inline-block" id="logo-title">Fusion Dragon</span></a>
+        </div>
+        <div class="row">
+          <div class="col burger">
+            <ul class="navbar-nav">
+              <li class="nav-item d-none d-lg-block inline-block">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item d-none d-lg-block inline-block">
+                <a class="nav-link" href="recipe-home-page.html">Recipes</a>
+              </li>
+              <li class="nav-item d-none d-lg-block inline-block">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
 
-          </ul>
-          <div class="dropdown">
-            <button class="btn btn-secondary d-block d-lg-none" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fa-solid fa-dragon"></i>
-            </button>
-            <div class="dropdown-menu dropdown-menu-right" data-display="static" aria-labelledby="dropdownMenu2">
-              <a href="index.html" class="dropdown-item">Home</a>
-              <a href="recipe-home-page.html" class="dropdown-item">Recipes</a>
-              <a href="about.html" class="dropdown-item">About</a>
+            </ul>
+            <div class="dropdown">
+              <button class="btn btn-primary d-block d-lg-none" type="button" data-toggle="collapse"
+                data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <i class="fa-solid fa-dragon"></i>
+              </button>
             </div>
           </div>
         </div>
@@ -47,31 +47,40 @@
     </nav>
   </header>
 
-  
-    <h1 class="text-center">Chinese Recipes</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <h3 class="text-center recipe-titles">Sticky soy and ginger tofu with charred broccoli</h3>
-        <a href="ginger-tofu.html"><img src="assets/images/Sticky soy and ginger tofu with charred broccoli recipe.jpg" alt="Recipe 1"
-          class="img-fluid"></a>
-        <p class="text-center">It's hard to believe this dish is ready in just 20 minutes! Packed with sweet, sour and
-          salty flavours, this Chinese-inspired stir-fry makes a perfect fast and fresh fakeaway.</p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="text-center recipe-titles">Chicken noodle stir-fry recipe</h3>
-        <a href="chicken-noodle.html"><img src="assets/images/Chicken Noodle Stir Fry Recipe.jpg" alt="Recipe 2" class="img-fluid"></a>
-        <p class="text-center">You can't go wrong with a classic chicken stir-fry recipe. This simple recipe combines
-          sticky soy sauce glazed chicken thighs with plenty of veg, toasted cashews and noodles </p>
-      </div>
-      <div class="col-md-4">
-        <h3 class="text-center recipe-titles">Slow-cooker Asian pork roast recipe</h3>
-        <a href="pork-roast.html"><img src="assets/images/Slow-cooker braised Chinese pork.jpg" alt="Recipe 3" class="img-fluid"></a>
-        <p class="text-center">A gorgeous slow-cooker recipe that is so simple, yet so tasty. Cokking ork this way means
-          that it is beutifully tender when it comes to serving, while the strong flavors have had time to mild
-          together.</p>
-      </div>
+  <div class="collapse" id="collapseExample">
+    <div class="card card-body">
+      <a href="index.html" class="dropdown-item">Home</a>
+      <a href="recipe-home-page.html" class="dropdown-item">Recipes</a>
+      <a href="about.html" class="dropdown-item">About</a>
     </div>
-  
+  </div>
+
+  <h1 class="text-center">Chinese Recipes</h1>
+  <div class="row">
+    <div class="col-md-4">
+      <h3 class="text-center recipe-titles">Sticky soy and ginger tofu with charred broccoli</h3>
+      <a href="ginger-tofu.html"><img src="assets/images/Sticky soy and ginger tofu with charred broccoli recipe.jpg"
+          alt="Recipe 1" class="img-fluid"></a>
+      <p class="text-center">It's hard to believe this dish is ready in just 20 minutes! Packed with sweet, sour and
+        salty flavours, this Chinese-inspired stir-fry makes a perfect fast and fresh fakeaway.</p>
+    </div>
+    <div class="col-md-4">
+      <h3 class="text-center recipe-titles">Chicken noodle stir-fry recipe</h3>
+      <a href="chicken-noodle.html"><img src="assets/images/Chicken Noodle Stir Fry Recipe.jpg" alt="Recipe 2"
+          class="img-fluid"></a>
+      <p class="text-center">You can't go wrong with a classic chicken stir-fry recipe. This simple recipe combines
+        sticky soy sauce glazed chicken thighs with plenty of veg, toasted cashews and noodles </p>
+    </div>
+    <div class="col-md-4">
+      <h3 class="text-center recipe-titles">Slow-cooker Asian pork roast recipe</h3>
+      <a href="pork-roast.html"><img src="assets/images/Slow-cooker braised Chinese pork.jpg" alt="Recipe 3"
+          class="img-fluid"></a>
+      <p class="text-center">A gorgeous slow-cooker recipe that is so simple, yet so tasty. Cokking ork this way means
+        that it is beutifully tender when it comes to serving, while the strong flavors have had time to mild
+        together.</p>
+    </div>
+  </div>
+
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
       <div class="col-sm-12">
