working version of homepage but with only 2 featured

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <div class="flex-item">
+    <div class="flex-item-3">
       <div class="featured-box-3">
           <div class="featured-title-3">
             <h3>Featured: Sticky Soy and Ginger Tofu</h3>
