added footer and beautified the code

--- a/ginger-tofu.html
+++ b/ginger-tofu.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!--------------------------------------------------------------------------- navigation bar -->
   <header>
     <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
@@ -46,7 +47,7 @@
       </div>
     </nav>
   </header>
-
+  <!----------------------------------------------------------------- navbar dropdown card-->
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <a href="index.html" class="dropdown-item">Home</a>
@@ -54,7 +55,7 @@
       <a href="about.html" class="dropdown-item">About</a>
     </div>
   </div>
-
+  <!----------------------------------------------------------------- Start of page content-->
   <section class=" h-md-100 d-flex flex-column nopadding">
     <div class="row flex-grow-1">
       <div class="col-lg-4 col-12 nopadding">
@@ -193,7 +194,7 @@
       </div>
     </div>
   </section>
-
+  <!------------------------------------------------------------------------------------------ Footer -->
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
       <div class="col-sm-12">
@@ -247,6 +248,8 @@
     </div>
 
   </footer>
+
+  <!-------------------------------------------------------------------------------------- js scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
