--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     </nav>
   </header>
 
-  <!----------------------------------------------------------------- info that appears below nav -->
+  <!----------------------------------------------------------------- navbar dropdown card-->
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <a href="index.html" class="dropdown-item">Home</a>
@@ -56,6 +56,7 @@
       <a href="about.html" class="dropdown-item">About</a>
     </div>
   </div>
+  <!----------------------------------------------------------------- Start of page content-->
   <div class="row about-h1 text-center">
     <div class="col-12">
       <h1>Meet The Team</h1>
