--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+  <!--------------------------------------------------------------------------- navigation bar -->
   <header>
     <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
@@ -47,7 +47,7 @@
       </div>
     </nav>
   </header>
-
+  <!----------------------------------------------------------------- navbar dropdown card-->
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <a href="index.html" class="dropdown-item">Home</a>
@@ -55,7 +55,7 @@
       <a href="about.html" class="dropdown-item">About</a>
     </div>
   </div>
-
+  <!----------------------------------------------------------------- Start of page content-->
   <section class=" h-md-100 d-flex flex-column nopadding">
     <div class="row flex-grow-1">
       <div class="col-lg-4 col-12 nopadding">
@@ -135,7 +135,7 @@
     </div>
 
 
-    <div class="row flex-grow-1 nopadding">
+    <div class="row flex-grow-1 nopadding" style="margin-bottom: 72px;">
       <div class="col-lg-4 col-12">
         <h2 class="recipe-title-h2 add-padding-top">Ingredients</h2>
         <ul>
@@ -170,7 +170,7 @@
         </ul>
 
       </div>
-      <div class="col-lg-8 col-12 nopadding">
+      <div class="col-lg-8 col-12 nopadding" style="margin-bottom: 72px;">
         <h2 class="recipe-title-h2">Method</h2>
         <ol>
           <li class="listmargin">Boil the noodles, following pack instructions, then drain and set aside.</li>
@@ -191,7 +191,71 @@
     </div>
   </section>
 
-  <script src="https://kit.fontawesome.com/afced6604b.js" crossorigin="anonymous"></script>
+  <!------------------------------------------------------------------------------------------ Footer -->
+  <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
+    <div id="footer-details" class="row">
+      <div class="col-sm-12">
+        <h5 class="uppercase general-sub">Socials</h5>
+        <ul class="list-inline social-links">
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <span class="sr-only">Twitter</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <span class="sr-only">Linkedin</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-pinterest" aria-hidden="true"></i>
+              <span class="sr-only">Pinterest</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-youtube" aria-hidden="true"></i>
+              <span class="sr-only">Youtube</span>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+
+  </footer>
+
+  <!-------------------------------------------------------------------------------------- js scripts -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
