--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!--------------------------------------------------------------------------- navigation bar -->
   <header>
     <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
@@ -46,7 +47,7 @@
       </div>
     </nav>
   </header>
-
+  <!----------------------------------------------------------------- navbar dropdown card-->
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <a href="index.html" class="dropdown-item">Home</a>
@@ -54,6 +55,7 @@
       <a href="about.html" class="dropdown-item">About</a>
     </div>
   </div>
+  <!----------------------------------------------------------------- Start of page content-->
   <section>
     <div class="container-our-mission">
       <h3>Our Mission</h3>
@@ -74,7 +76,7 @@
 
 
 
-
+  <!------------------------------------------------------------------------------------------ Footer -->
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
       <div class="col-sm-12">
@@ -128,6 +130,7 @@
     </div>
 
   </footer>
+  <!-------------------------------------------------------------------------------------- js scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
