--- a/recipe-home-page.html
+++ b/recipe-home-page.html
@@ -57,7 +57,7 @@
   </div>
   <!----------------------------------------------------------------- Start of page content-->
   <section class=" h-md-100 d-flex flex-column nopadding">
-    <h1 class="text-center">Chinese Recipes</h1>
+    <h1 class="text-center" style="padding-top: 15px;">Fusion Recipes</h1>
     <div class="row">
       <div class="col-md-4">
         <h3 class="text-center recipe-titles">Sticky soy and ginger tofu with charred broccoli</h3>
@@ -73,7 +73,7 @@
         <p class="text-center">You can't go wrong with a classic chicken stir-fry recipe. This simple recipe combines
           sticky soy sauce glazed chicken thighs with plenty of veg, toasted cashews and noodles </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" style="margin-bottom: 72px;">
         <h3 class="text-center recipe-titles">Slow-cooker Asian pork roast recipe</h3>
         <a href="pork-roast.html"><img src="assets/images/Slow-cooker braised Chinese pork.jpg" alt="Recipe 3"
             class="img-fluid"></a>
