--- a/pork-roast.html
+++ b/pork-roast.html
@@ -135,7 +135,7 @@
     </div>
 
 
-    <div class="row flex-grow-1 nopadding">
+    <div class="row flex-grow-1 nopadding" style="margin-bottom: 72px;">
       <div class="col-lg-4 col-12">
         <h2 class="recipe-title-h2 add-padding-top">Ingredients</h2>
         <ul>
@@ -164,7 +164,7 @@
         </ul>
 
       </div>
-      <div class="col-lg-8 col-12 nopadding">
+      <div class="col-lg-8 col-12 nopadding" style="margin-bottom: 72px;">
         <h2 class="recipe-title-h2">Method</h2>
         <ol>
           <li class="listmargin">Marinate the meat with 1 tbsp of the soy and set aside. In a frying pan, heat the oil.
