--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
         <div class="col">
-          <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
+          <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/FusionDragonLogo.jpg"
               alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
             <span class="inline-block" id="logo-title">Fusion Dragon</span></a>
         </div>
