--- a/recipe-home-page.html
+++ b/recipe-home-page.html
@@ -61,21 +61,21 @@
     <div class="row">
       <div class="col-md-4">
         <h3 class="text-center recipe-titles">Sticky soy and ginger tofu with charred broccoli</h3>
-        <a href="ginger-tofu.html"><img src="assets/images/Sticky soy and ginger tofu with charred broccoli recipe.jpg"
+        <a href="ginger-tofu.html"><img src="assets/images/Stickysoyandgingertofuwithcharredbroccolirecipe.jpg"
             alt="Recipe 1" class="img-fluid"></a>
         <p class="text-center">It's hard to believe this dish is ready in just 20 minutes! Packed with sweet, sour and
           salty flavours, this Chinese-inspired stir-fry makes a perfect fast and fresh fakeaway.</p>
       </div>
       <div class="col-md-4">
         <h3 class="text-center recipe-titles">Chicken noodle stir-fry recipe</h3>
-        <a href="chicken-noodle.html"><img src="assets/images/Chicken Noodle Stir Fry Recipe.jpg" alt="Recipe 2"
+        <a href="chicken-noodle.html"><img src="assets/images/ChickenNoodleStirFryRecipe.jpg" alt="Recipe 2"
             class="img-fluid"></a>
         <p class="text-center">You can't go wrong with a classic chicken stir-fry recipe. This simple recipe combines
           sticky soy sauce glazed chicken thighs with plenty of veg, toasted cashews and noodles </p>
       </div>
       <div class="col-md-4" style="margin-bottom: 72px;">
         <h3 class="text-center recipe-titles">Slow-cooker Asian pork roast recipe</h3>
-        <a href="pork-roast.html"><img src="assets/images/Slow-cooker braised Chinese pork.jpg" alt="Recipe 3"
+        <a href="pork-roast.html"><img src="assets/images/Slow-cookerbraisedChinesepork.jpg" alt="Recipe 3"
             class="img-fluid"></a>
         <p class="text-center">A gorgeous slow-cooker recipe that is so simple, yet so tasty. Cokking ork this way means
           that it is beutifully tender when it comes to serving, while the strong flavors have had time to mild
