fixed final navbar links

--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
         <div class="col">
           <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/FusionDragonLogo.jpg"
               alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
-            <span class="inline-block" id="logo-title">Fusion Dragon</span></a>
+            <span class="inline-block d-none d-lg-inline-block" id="logo-title">Fusion Dragon</span>
+            <span class="inline-block d-inline-block d-lg-none" id="logo-title">F.D</span>
+          </a>
         </div>
         <div class="row">
           <div class="col burger">
