--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
         <div class="col">
-          <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/FusionDragonLogo.jpg"
+          <a class="navbar-brand inline-block" href="index.html" style="margin-right: 0px;"><img src="assets/images/FusionDragonLogo.jpg"
               alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
-            <span class="inline-block d-none d-lg-inline-block" id="logo-title">Fusion Dragon</span>
-            <span class="inline-block d-inline-block d-lg-none" id="logo-title">F.D</span>
+            <span class="inline-block d-none d-lg-inline-block logo-title">Fusion Dragon</span>
+            <span class="inline-block d-inline-block d-lg-none logo-title">F.D</span>
           </a>
         </div>
         <div class="row">
