Added home page details

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <nav class="navbar navbar-expand-lg box-sizing">
       <div class="row container-fluid navbar-full">
         <div class="col">
-          <a class="navbar-brand inline-block" href="index.html" style="margin-right: 0px;"><img src="assets/images/FusionDragonLogo.jpg"
-              alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
+          <a class="navbar-brand inline-block" href="index.html" style="margin-right: 0px;"><img
+              src="assets/images/FusionDragonLogo.jpg" alt="logo of a dragon behind a bowl of noodles"
+              class="fusion-logo">
             <span class="inline-block d-none d-lg-inline-block logo-title">Fusion Dragon</span>
             <span class="inline-block d-inline-block d-lg-none logo-title">F.D</span>
           </a>
@@ -59,25 +60,15 @@
   </div>
   <!----------------------------------------------------------------- Start of page content-->
   <section>
-    <div class="container-our-mission">
-      <h3>Our Mission</h3>
-      <p>Here at Fusion Dragon, we believe our mission is to bring you delightful flavour from all across the orient.
-        Within these pages you can find recipes for tasty dishes that you don's need a professional kitchen to make.
-        Each recipe has been chosen by our expert chefs for ease of making along with great falvours.</p>
-
+    <div id="hero-image">
+      <div class="container-our-mission">
+        <h3>Our Mission</h3>
+        <p>Here at Fusion Dragon, we believe our mission is to bring you delightful flavour from all across the orient.
+          Within these pages you can find recipes for tasty dishes that you don's need a professional kitchen to make.
+          Each recipe has been chosen by our expert chefs for ease of making along with great falvours.</p>
+      </div>
     </div>
   </section>
-  <main>
-    <section id="hero">
-      <div class="hero-image">
-        <img src="assets/images/hero-image-chinese-food.jpg" class="img-fluid" alt="Selection of Chinese food">
-      </div>
-    </section>
-  </main id="hero-image-main">
-
-
-
-
   <!------------------------------------------------------------------------------------------ Footer -->
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
